<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp"
    android:clickable="false"
    app:cardElevation="5dp"
    android:layout_gravity="center"
    android:backgroundTint="@color/colorLightGrey2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="10dp">
        <com.example.krilia.utils.KRTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prices"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_all_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_pices"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_firstprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_price"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/onPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_secondprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_price"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/onPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_thirdprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_price"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/onPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_fourthprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_price"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/onPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_moreprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_price"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/onPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
        </LinearLayout>
        <com.example.krilia.utils.KRTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_all_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_available_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/onPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
            <com.example.krilia.utils.KRTextView
                android:id="@+id/tv_filter_notavailable_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:background="@drawable/tip_button"
                android:backgroundTint="@color/onPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                />
        </LinearLayout>

        <com.example.krilia.utils.KRTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"/>
        <Spinner
            android:id="@+id/et_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:padding="@dimen/et_padding"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/et_textSize"
            android:entries="@array/categories_list2"
            android:popupBackground="@color/colorLightGrey"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <com.example.krilia.utils.KRButton
                android:id="@+id/btn_apply_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tip_button"
                android:layout_marginEnd="16dp"
                android:text="@string/apply"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>