<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <com.example.krilia.utils.KRTextView
            android:id="@+id/KRTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/about_us"
            android:textAlignment="textStart"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.example.krilia.utils.KRTextView
        android:id="@+id/KRTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/about_us_desc"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KRTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/aboutus1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KRTextView2"
        android:contentDescription="@string/content_description"/>

    <ImageView
        android:id="@+id/iv_goal"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_beenhere_24"
        android:tint="@color/primary"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/content_description"/>

        <com.example.krilia.utils.KRTextView
            android:id="@+id/tv_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/goal"
            android:textAlignment="textStart"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_goal"
            app:layout_constraintStart_toStartOf="parent" />

    <com.example.krilia.utils.KRTextView
        android:id="@+id/tv_goal_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs_goal_desc"
        android:textAlignment="textStart"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_goal" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/aboutus2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_goal_desc"
        android:contentDescription="@string/content_description"/>
    <ImageView
        android:id="@+id/iv_alert"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_warning_24"
        android:tint="@color/primary"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/content_description"/>

    <com.example.krilia.utils.KRTextView
        android:id="@+id/tv_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/alert"
        android:textAlignment="textStart"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/iv_alert"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.krilia.utils.KRTextView
        android:id="@+id/tv_alert_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/alert_desc"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert" />

    <com.example.krilia.utils.KRTextView
        android:id="@+id/tv_red_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/alert_desc_red"
        android:textColor="@color/colorSnackBarError"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert_desc" />
    <com.example.krilia.utils.KRTextView
        android:id="@+id/tv_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_us_team"
        android:textAlignment="textStart"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_red_alert"
        app:layout_constraintStart_toStartOf="parent" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingVertical="8dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="10dp"
            app:cardCornerRadius="5dp"
            android:clickable="false"
            app:cardElevation="5dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_team"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/card_team">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/me_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    app:civ_border_color="#FFFFFFFF"
                    app:civ_border_width="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.example.krilia.utils.KRTextViewBold
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_us_team_name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/me_image" />
                <TextView
                    android:id="@+id/designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_us_team_job"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"/>
                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:text='@string/about_us_team_desc'
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/designation"/>
                <LinearLayout
                    android:id="@+id/icons_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/icon_facebook"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/facebook"
                        android:tint="@color/secondary"
                        android:contentDescription="@string/content_description"
                        />
                    <ImageView
                        android:id="@+id/icon_twitter"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/twitter"
                        android:tint="@color/secondary"
                        android:contentDescription="@string/content_description"
                        />
                    <ImageView
                        android:id="@+id/icon_instagram"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/instagram"
                        android:tint="@color/secondary"
                        android:contentDescription="@string/content_description"
                        />
                    <ImageView
                        android:id="@+id/icon_linkedIn"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/linkedin"
                        android:tint="@color/secondary"
                        android:contentDescription="@string/content_description"
                        />
                </LinearLayout>
                <com.example.krilia.utils.KRButton
                    android:id="@+id/btn_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tip_button"
                    android:gravity="center"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="50dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/tip"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_textSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icons_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_team"
            />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>